adding deck collection
